--- a/TradeRobotBitso/App.config
+++ b/TradeRobotBitso/App.config
@@ -10,6 +10,9 @@
     <add key="Ticker" value="/ticker/"/>
     <add key="OrderBook" value="/order_book?"/>
     <add key="Trades" value="/trades?"/>
+    <add key="Balance" value="/balance"/>
+    <add key ="Status" value="/account_status"/>
+    <add key="ApiKey" value="C:\Users\Pablo\Desktop\Emiliano\trb_api_key.txt"/>
     <!--Fin-->
 </appSettings>
 </configuration>
